@@ -1,3 +1,6 @@
+import sbt.Keys._
+import sbt._
+
 name := "serverinterpreter"
 
 organization := "org.unblock"
@@ -5,6 +8,11 @@ organization := "org.unblock"
 version := "0.0.1"
 
 scalaVersion := "2.12.4"
+
+resolvers ++= Seq("Sonatype Releases" at "https://oss.sonatype.org/content/repositories/releases/",
+  "SonaType" at "https://oss.sonatype.org/content/groups/public",
+  "Typesafe maven releases" at "http://repo.typesafe.com/typesafe/maven-releases/",
+  "Sonatype Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots/")
 
 val testingDependencies = Seq(
   "org.scalatest" %% "scalatest" % "3.0.+" % "test",
@@ -26,3 +34,35 @@ libraryDependencies ++= Seq(
 
 //uncomment lines below if the Scala compiler hangs to see where it happens
 //scalacOptions in Compile ++= Seq("-Xprompt", "-Ydebug", "-verbose" )
+
+mainClass in assembly := Some("Main")
+mainClass in run := Some("Main")
+
+val opts = Seq(
+  "-server",
+  // JVM memory tuning for 2g ram
+  "-Xms128m",
+  "-Xmx2G",
+  "-XX:+ExitOnOutOfMemoryError",
+  // Java 9 support
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-modules=java.xml.bind",
+
+  // from https://groups.google.com/d/msg/akka-user/9s4Yl7aEz3E/zfxmdc0cGQAJ
+  "-XX:+UseG1GC",
+  "-XX:+UseNUMA",
+  "-XX:+AlwaysPreTouch",
+
+  // probably can't use these with jstack and others tools
+  "-XX:+PerfDisableSharedMem",
+  "-XX:+ParallelRefProcEnabled",
+  "-XX:+UseStringDeduplication")
+
+javaOptions in run ++= opts
+
+assemblyMergeStrategy in assembly := {
+  case "logback.xml" => MergeStrategy.first
+  case "module-info.class" => MergeStrategy.discard
+  case  PathList("org", "scalatools", "testing", xs @ _*) => MergeStrategy.first
+  case other => (assemblyMergeStrategy in assembly).value(other)
+}
